[package]
name = "gossipsub-score-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Umbrella crate. We enable the features we use:
# - tokio + tcp + noise + yamux for transport
# - gossipsub for pubsub
# - macros for #[derive(NetworkBehaviour)]
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "macros"] }

[dev-dependencies]
proptest = "1"
